--- a/packages/WalkingPromotor/app/src/main/res/layout/activity_fourth.xml
+++ b/packages/WalkingPromotor/app/src/main/res/layout/activity_fourth.xml
@@ -6,30 +6,49 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".activities.FourthActivity">
-    <TextView
-            android:text="TextView"
-            android:layout_width="421dp"
-            android:layout_height="55dp" android:id="@+id/title_View"
-            android:textSize="36dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.047"
-            app:layout_constraintHorizontal_bias="0.076" app:layout_constraintEnd_toEndOf="parent"/>
-    <TextView
-            android:text="TextView"
-            android:layout_width="197dp"
-            android:layout_height="56dp"
-            android:textSize="36dp"
-            android:id="@+id/day_View" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.88" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.047"/>
-    <ImageView
+
+  <TextView
+    android:id="@+id/title_View"
+    android:layout_width="267dp"
+    android:layout_height="58dp"
+    android:text="TextView"
+    android:textSize="36dp"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="0.952"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintVertical_bias="0.268" />
+
+  <TextView
+    android:id="@+id/day_View"
+    android:layout_width="197dp"
+    android:layout_height="56dp"
+    android:text="TextView"
+    android:textSize="36dp"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="0.865"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintVertical_bias="0.418" />
+
+  <ImageView
             android:layout_width="582dp"
             android:layout_height="437dp"
             android:id="@+id/photo_View"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.108"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.846"/>
+
+  <Button
+    android:id="@+id/button6"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginEnd="32dp"
+    android:layout_marginBottom="32dp"
+    android:text="戻る"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
