--- a/packages/WalkingPromotor/app/src/main/res/layout/activity_first_diary.xml
+++ b/packages/WalkingPromotor/app/src/main/res/layout/activity_first_diary.xml
@@ -7,13 +7,13 @@
   tools:context="io.github.healthifier.walking_promoter.activities.FirstDiaryActivity">
 
   <Button
-    android:id="@+id/btn_show_diary"
+    android:id="@+id/btn_make_diary"
     android:layout_width="250dp"
     android:layout_height="250dp"
-    android:layout_marginStart="150dp"
+    android:layout_marginStart="32dp"
     android:layout_marginTop="37dp"
     android:background="@drawable/frame_style"
-    android:text="日記を確認する"
+    android:text="日記を書く"
     android:textColor="#FFFFFF"
     android:textSize="24sp"
     android:textStyle="bold"
@@ -21,11 +21,25 @@
     app:layout_constraintTop_toBottomOf="@+id/choice_textView" />
 
   <Button
+    android:id="@+id/btn_show_diary"
+    android:layout_width="250dp"
+    android:layout_height="250dp"
+    android:layout_marginStart="80dp"
+    android:layout_marginTop="36dp"
+    android:background="@drawable/frame_style"
+    android:text="日記を確認する"
+    android:textColor="#FFFFFF"
+    android:textSize="24sp"
+    android:textStyle="bold"
+    app:layout_constraintStart_toEndOf="@+id/btn_make_diary"
+    app:layout_constraintTop_toBottomOf="@+id/choice_textView" />
+
+  <Button
     android:id="@+id/btn_show_online"
     android:layout_width="250dp"
     android:layout_height="250dp"
     android:layout_marginTop="37dp"
-    android:layout_marginEnd="150dp"
+    android:layout_marginEnd="32dp"
     android:background="@drawable/frame_style"
     android:text="みんなで情報共有する"
     android:textColor="#FFFFFF"
