--- a/packages/WalkingPromotor/app/src/main/res/layout/list.xml
+++ b/packages/WalkingPromotor/app/src/main/res/layout/list.xml
@@ -5,39 +5,35 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <TextView
-            android:id="@+id/titleTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"
-            android:text="TextView"
-            android:textSize="32sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.047"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+  <TextView
+    android:id="@+id/titleTextView"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="8dp"
+    android:layout_marginTop="16dp"
+    android:text="TextView"
+    android:textSize="32sp"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-            android:id="@+id/dayTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="320dp"
-            android:layout_marginTop="16dp"
-            android:text="TextView"
-            android:textSize="32sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+  <TextView
+    android:id="@+id/dayTextView"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="32dp"
+    android:layout_marginTop="16dp"
+    android:text="TextView"
+    android:textSize="32sp"
+    app:layout_constraintStart_toEndOf="@+id/titleTextView"
+    app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-            android:id="@+id/photoImageView"
-            android:layout_width="72dp"
-            android:layout_height="54dp"
-            android:layout_marginStart="160dp"
-            android:layout_marginTop="5dp"
-            app:layout_constraintStart_toEndOf="@+id/dayTextView"
-            app:layout_constraintTop_toTopOf="parent" />
+  <ImageView
+    android:id="@+id/photoImageView"
+    android:layout_width="72dp"
+    android:layout_height="54dp"
+    android:layout_marginStart="32dp"
+    android:layout_marginTop="5dp"
+    app:layout_constraintStart_toEndOf="@+id/dayTextView"
+    app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
