--- a/packages/WalkingPromotor/app/src/main/res/layout/activity_mets.xml
+++ b/packages/WalkingPromotor/app/src/main/res/layout/activity_mets.xml
@@ -8,31 +8,35 @@
 
   <LinearLayout
     android:id="@+id/container"
-    android:layout_width="850dp"
-    android:layout_height="500dp"
+    android:layout_width="900dp"
+    android:layout_height="450dp"
     android:layout_marginTop="8dp"
     android:orientation="horizontal"
     app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="0.5"
+    app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"></LinearLayout>
 
   <Button
-    android:id="@+id/fragsShowbutton"
+    android:id="@+id/backbutton"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginStart="8dp"
     android:layout_marginTop="8dp"
-    android:text="Button"
-    app:layout_constraintStart_toStartOf="parent"
+    android:layout_marginEnd="100dp"
+    android:text="前の画面に戻る"
+    android:textSize="36sp"
+    app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/container" />
 
   <Button
     android:id="@+id/tmpShowCal"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginStart="8dp"
+    android:layout_marginStart="100dp"
     android:layout_marginTop="8dp"
-    android:text="Button"
+    android:text="日にちを選ぼう"
+    android:textSize="36sp"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent" />
+    app:layout_constraintTop_toBottomOf="@+id/container" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
