--- a/packages/WalkingPromotor/app/src/main/res/layout/activity_first_diary.xml
+++ b/packages/WalkingPromotor/app/src/main/res/layout/activity_first_diary.xml
@@ -8,42 +8,34 @@
 
   <Button
     android:id="@+id/btn_make_diary"
-    android:layout_width="250dp"
-    android:layout_height="250dp"
+    android:layout_width="400dp"
+    android:layout_height="380dp"
     android:layout_marginStart="32dp"
-    android:layout_marginTop="37dp"
-    android:background="@drawable/frame_style"
-    android:text="日記を書く"
+    android:layout_marginTop="8dp"
+    android:background="#FF9800"
+    android:drawableTop="@drawable/ic_baseline_home_24"
+    android:drawableTint="#FFFFFF"
+    android:gravity="bottom|center"
+    android:text="自宅"
     android:textColor="#FFFFFF"
-    android:textSize="24sp"
+    android:textSize="72sp"
     android:textStyle="bold"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/choice_textView" />
 
   <Button
-    android:id="@+id/btn_show_diary"
-    android:layout_width="250dp"
-    android:layout_height="250dp"
-    android:layout_marginStart="80dp"
-    android:layout_marginTop="36dp"
-    android:background="@drawable/frame_style"
-    android:text="日記を確認する"
-    android:textColor="#FFFFFF"
-    android:textSize="24sp"
-    android:textStyle="bold"
-    app:layout_constraintStart_toEndOf="@+id/btn_make_diary"
-    app:layout_constraintTop_toBottomOf="@+id/choice_textView" />
-
-  <Button
     android:id="@+id/btn_show_online"
-    android:layout_width="250dp"
-    android:layout_height="250dp"
-    android:layout_marginTop="37dp"
+    android:layout_width="400dp"
+    android:layout_height="380dp"
+    android:layout_marginTop="8dp"
     android:layout_marginEnd="32dp"
-    android:background="@drawable/frame_style"
-    android:text="みんなで情報共有する"
+    android:background="#2196F3"
+    android:drawableTop="@drawable/ic_baseline_group_24"
+    android:drawableTint="#FFFFFF"
+    android:gravity="bottom|center"
+    android:text="教室"
     android:textColor="#FFFFFF"
-    android:textSize="24sp"
+    android:textSize="72sp"
     android:textStyle="bold"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/choice_textView" />
@@ -52,7 +44,7 @@
     android:id="@+id/choice_textView"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginTop="64dp"
+    android:layout_marginTop="16dp"
     android:text="どちらかを選択してください"
     android:textSize="36sp"
     android:textStyle="bold"
