--- a/packages/WalkingPromotor/app/src/main/res/layout/activity_diary_menu.xml
+++ b/packages/WalkingPromotor/app/src/main/res/layout/activity_diary_menu.xml
@@ -4,76 +4,88 @@
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  tools:context="io.github.healthifier.walking_promoter.activities.ProgramActivity">
+  tools:context="io.github.healthifier.walking_promoter.activities.DiaryMenuActivity">
 
   <!-- ツールバー -->
   <androidx.appcompat.widget.Toolbar
     android:id="@+id/main_toolbar"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
-    android:background="#2196F3"
+    android:background="#FF9800"
     android:fitsSystemWindows="true"
     android:minHeight="?attr/actionBarSize"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
-    app:title="教室メニュー"
+    app:title="日記を見るメニュー"
     tools:ignore="MissingConstraints" />
 
-
-  <TableLayout
-    android:layout_width="0dp"
-    android:layout_height="0dp"
-    android:stretchColumns="0,1,2"
-    app:layout_constraintBottom_toBottomOf="parent"
+  <LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
     app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.5"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/main_toolbar">
 
-    <TableRow
+    <LinearLayout
       android:layout_width="match_parent"
-      android:layout_height="match_parent"
+      android:layout_height="wrap_content"
       android:layout_weight="1">
 
       <Button
-        android:id="@+id/button4"
+        android:id="@+id/btn_diary_mine"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:backgroundTint="#7AED00"
-        android:drawableTop="@drawable/ic_baseline_image_search_24"
+        android:layout_weight="2"
+        android:backgroundTint="#FF9800"
+        android:drawableTop="@drawable/ic_baseline_person_24"
         android:drawableTint="#FFFFFF"
         android:gravity="bottom|center"
-        android:text="みんなで写真共有"
-        android:textSize="36sp"
+        android:text="自分の日記"
+        android:textColor="#FFFFFF"
+        android:textSize="64sp"
         android:textStyle="bold" />
 
       <Button
-        android:id="@+id/button3"
+        android:id="@+id/btn_diary_every"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:backgroundTint="#FFFFFF"
-        android:drawableTop="@drawable/ic_baseline_flag_24"
-        android:gravity="bottom|center"
-        android:text="みんなで目標設定"
-        android:textSize="36sp"
-        android:textStyle="bold" />
-
-      <Button
-        android:id="@+id/button5"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:backgroundTint="#7AED00"
-        android:drawableTop="@drawable/ic_baseline_undo_24"
+        android:backgroundTint="#2196F3"
+        android:drawableTop="@drawable/ic_baseline_group_24"
         android:drawableTint="#FFFFFF"
         android:gravity="bottom|center"
-        android:text="始めに戻る"
-        android:textSize="32sp"
+        android:text="みんなの日記"
+        android:textColor="#FFFFFF"
+        android:textSize="64sp"
         android:textStyle="bold" />
 
-    </TableRow>
-  </TableLayout>
+    </LinearLayout>
+
+    <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_weight="1">
+
+      <Button
+        android:id="@+id/backButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:backgroundTint="#FFF6CF"
+        android:textSize="40sp"
+        android:text="前の画面に戻る"
+        android:textStyle="bold"/>
+
+    </LinearLayout>
+
+
+  </LinearLayout>
+
+
+
+
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
