--- a/packages/WalkingPromotor/app/src/main/res/layout/activity_diary_up.xml
+++ b/packages/WalkingPromotor/app/src/main/res/layout/activity_diary_up.xml
@@ -4,28 +4,42 @@
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  tools:context="io.github.healthifier.walking_promoter.activities.StartActivity">
+  tools:context="io.github.healthifier.walking_promoter.activities.DiaryUpActivity">
 
-  <LinearLayout
-    android:id="@+id/container"
-    android:layout_width="960dp"
-    android:layout_height="400dp"
-    android:orientation="horizontal"
+  <androidx.appcompat.widget.Toolbar
+    android:id="@+id/main_toolbar"
+    android:layout_width="match_parent"
+    android:layout_height="?attr/actionBarSize"
+    android:background="#FF9800"
+    android:fitsSystemWindows="true"
+    android:minHeight="?attr/actionBarSize"
     app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.5"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"></LinearLayout>
+    app:layout_constraintTop_toTopOf="parent"
+    app:title="日記を投稿する"
+    tools:ignore="MissingConstraints" />
+
+  <ListView
+    android:id="@+id/list_view"
+    android:layout_width="940dp"
+    android:layout_height="400dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/main_toolbar" />
 
   <Button
     android:id="@+id/backButton"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="8dp"
     android:backgroundTint="#FFF6CF"
     android:text="前の画面に戻る"
     android:textSize="30sp"
+    android:textStyle="bold"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.5"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/container" />
+    app:layout_constraintTop_toBottomOf="@+id/list_view" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
