--- a/packages/WalkingPromotor/app/src/main/res/layout/activity_sign.xml
+++ b/packages/WalkingPromotor/app/src/main/res/layout/activity_sign.xml
@@ -13,7 +13,7 @@
     android:layout_marginStart="160dp"
     android:layout_marginBottom="80dp"
     android:background="#8BC34A"
-    android:text="新規登録/ログイン"
+    android:text="新規登録"
     android:textSize="30sp"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintStart_toStartOf="parent" />
@@ -53,12 +53,13 @@
   </TextView>
 
   <Button
-    android:id="@+id/btnMainAct"
+    android:id="@+id/btnSignIn"
     android:layout_width="180dp"
     android:layout_height="100dp"
     android:layout_marginEnd="128dp"
     android:layout_marginBottom="80dp"
-    android:text="機能を使う"
+    android:backgroundTint="#8BC34A"
+    android:text="ログイン"
     android:textSize="30sp"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent" />
