--- a/packages/WalkingPromotor/app/src/main/res/layout/activity_walk_val.xml
+++ b/packages/WalkingPromotor/app/src/main/res/layout/activity_walk_val.xml
@@ -26,7 +26,7 @@
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
     android:layout_marginTop="16dp"
-    android:text="日にちを選択して歩数を記録しましょう"
+    android:text="日付を入力して歩数を記録しましょう"
     android:textAppearance="?android:attr/textAppearanceLarge"
     android:textSize="30sp"
     app:layout_constraintEnd_toEndOf="parent"
@@ -51,7 +51,7 @@
       android:layout_height="wrap_content"
       android:layout_weight="4"
       android:gravity="center"
-      android:text="日付"
+      android:text="年 / 月 / 日"
       android:textAppearance="?android:attr/textAppearanceLarge"
       android:textSize="24sp"
       android:textStyle="bold" />
@@ -102,7 +102,7 @@
         android:backgroundTint="#F2FF8784"
         android:drawableStart="@drawable/ic_baseline_calendar_today_24"
         android:drawableTint="#FFFFFF"
-        android:text="カレンダーを開く"
+        android:text="日付を入力"
         android:textColor="#FFFFFF"
         android:textSize="30sp"
         android:textStyle="bold"
