--- a/packages/WalkingPromotor/app/src/main/res/layout/activity_first_diary.xml
+++ b/packages/WalkingPromotor/app/src/main/res/layout/activity_first_diary.xml
@@ -7,7 +7,7 @@
   tools:context="io.github.healthifier.walking_promoter.activities.FirstDiaryActivity">
 
   <Button
-    android:id="@+id/btn_make_diary"
+    android:id="@+id/btn_show_home"
     android:layout_width="400dp"
     android:layout_height="380dp"
     android:layout_marginStart="32dp"
@@ -52,5 +52,25 @@
     app:layout_constraintHorizontal_bias="0.5"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent" />
+
+  <Button
+    android:id="@+id/btn_exp_home"
+    android:layout_width="80dp"
+    android:layout_height="80dp"
+    android:text="説明"
+    android:textSize="24sp"
+    android:textStyle="bold"
+    app:layout_constraintStart_toStartOf="@+id/btn_show_home"
+    app:layout_constraintTop_toTopOf="@+id/btn_show_home" />
+
+  <Button
+    android:id="@+id/btn_exp_online"
+    android:layout_width="80dp"
+    android:layout_height="80dp"
+    android:text="説明"
+    android:textSize="24sp"
+    android:textStyle="bold"
+    app:layout_constraintStart_toStartOf="@+id/btn_show_online"
+    app:layout_constraintTop_toTopOf="@+id/btn_show_online" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
