--- a/packages/WalkingPromotor/app/src/main/res/layout/activity_home_program.xml
+++ b/packages/WalkingPromotor/app/src/main/res/layout/activity_home_program.xml
@@ -22,97 +22,175 @@
     tools:ignore="MissingConstraints" />
 
 
-  <TableLayout
-    android:layout_width="0dp"
-    android:layout_height="0dp"
-    android:stretchColumns="0,1,2"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.5"
+  <FrameLayout
+    android:layout_width="match_parent"
+    android:layout_height="460dp"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/main_toolbar">
 
-    <TableRow
-      android:layout_width="match_parent"
+    <TableLayout
+      android:id="@+id/tableLayout"
+      android:layout_width="wrap_content"
       android:layout_height="match_parent"
-      android:layout_weight="1">
+      android:stretchColumns="0,1,2"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.5"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="parent">
 
-      <Button
-        android:id="@+id/write_button"
-        android:layout_width="wrap_content"
+      <TableRow
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:backgroundTint="#FAA6A4"
-        android:drawableTop="@drawable/ic_baseline_create_24"
-        android:drawableTint="#FFFFFF"
-        android:gravity="bottom|center"
-        android:text="日記を書く"
-        android:textSize="36sp"
-        android:textStyle="bold" />
+        android:layout_weight="1">
 
-      <Button
-        android:id="@+id/look_button"
-        android:layout_width="wrap_content"
+        <Button
+          android:id="@+id/write_button"
+          android:layout_width="wrap_content"
+          android:layout_height="match_parent"
+          android:backgroundTint="#FAA6A4"
+          android:drawableTop="@drawable/ic_baseline_create_24"
+          android:drawableTint="#FFFFFF"
+          android:gravity="bottom|center"
+          android:text="日記を書く"
+          android:textSize="36sp"
+          android:textStyle="bold" />
+
+        <Button
+          android:id="@+id/look_button"
+          android:layout_width="wrap_content"
+          android:layout_height="match_parent"
+          android:backgroundTint="#FFF6CF"
+          android:drawableTop="@drawable/ic_baseline_menu_book_24"
+          android:gravity="bottom|center"
+          android:text="日記を見る"
+          android:textSize="36sp"
+          android:textStyle="bold" />
+
+        <Button
+          android:id="@+id/upload_button"
+          android:layout_width="wrap_content"
+          android:layout_height="match_parent"
+          android:backgroundTint="#FAA6A4"
+          android:drawableTop="@drawable/ic_baseline_cloud_upload_24"
+          android:drawableTint="#FFFFFF"
+          android:gravity="bottom|center"
+          android:text="日記を投稿する"
+          android:textSize="36sp"
+          android:textStyle="bold" />
+
+      </TableRow>
+
+      <TableRow
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:backgroundTint="#FFF6CF"
-        android:drawableTop="@drawable/ic_baseline_menu_book_24"
-        android:gravity="bottom|center"
-        android:text="日記を見る"
-        android:textSize="36sp"
-        android:textStyle="bold" />
+        android:layout_weight="1">
 
-      <Button
-        android:id="@+id/upload_button"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:backgroundTint="#FAA6A4"
-        android:drawableTop="@drawable/ic_baseline_cloud_upload_24"
-        android:drawableTint="#FFFFFF"
-        android:gravity="bottom|center"
-        android:text="日記を投稿する"
-        android:textSize="36sp"
-        android:textStyle="bold" />
+        <Button
+          android:id="@+id/walk_button"
+          android:layout_width="wrap_content"
+          android:layout_height="match_parent"
+          android:backgroundTint="#FFF6CF"
+          android:drawableTop="@drawable/ic_baseline_directions_walk_24"
+          android:gravity="bottom|center"
+          android:text="歩数を記録する"
+          android:textSize="36sp"
+          android:textStyle="bold" />
 
-    </TableRow>
+        <Button
+          android:id="@+id/step_button"
+          android:layout_width="wrap_content"
+          android:layout_height="match_parent"
+          android:backgroundTint="#FAA6A4"
+          android:drawableTop="@drawable/ic_baseline_view_module_24"
+          android:drawableTint="#FFFFFF"
+          android:gravity="bottom|center"
+          android:text="ステップ練習"
+          android:textSize="36sp"
+          android:textStyle="bold" />
 
-    <TableRow
+        <Button
+          android:id="@+id/back_button"
+          android:layout_width="wrap_content"
+          android:layout_height="match_parent"
+          android:backgroundTint="#FFF6CF"
+          android:drawableTop="@drawable/ic_baseline_undo_24"
+          android:gravity="bottom|center"
+          android:text="始めに戻る"
+          android:textSize="36sp"
+          android:textStyle="bold" />
+
+      </TableRow>
+    </TableLayout>
+
+    <TableLayout
       android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:layout_weight="1">
+      android:layout_height="match_parent">
 
-      <Button
-        android:id="@+id/walk_button"
-        android:layout_width="wrap_content"
+      <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <Button
+          android:id="@+id/btn_"
+          android:layout_width="wrap_content"
+          android:layout_height="60dp"
+          android:textStyle="bold"
+          android:textSize="20sp"
+          android:text="説明" />
+
+        <Button
+          android:id="@+id/button11"
+          android:layout_width="wrap_content"
+          android:layout_height="60dp"
+          android:layout_marginStart="245dp"
+          android:textStyle="bold"
+          android:textSize="20sp"
+          android:text="説明" />
+
+        <Button
+          android:id="@+id/button15"
+          android:layout_width="wrap_content"
+          android:layout_height="60dp"
+          android:layout_marginStart="208dp"
+          android:textStyle="bold"
+          android:textSize="20sp"
+          android:text="説明" />
+      </TableRow>
+
+      <TableRow
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:backgroundTint="#FFF6CF"
-        android:drawableTop="@drawable/ic_baseline_directions_walk_24"
-        android:gravity="bottom|center"
-        android:text="歩数を記録する"
-        android:textSize="36sp"
-        android:textStyle="bold" />
+        android:layout_marginTop="170dp">
 
-      <Button
-        android:id="@+id/step_button"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:backgroundTint="#FAA6A4"
-        android:drawableTop="@drawable/ic_baseline_view_module_24"
-        android:drawableTint="#FFFFFF"
-        android:gravity="bottom|center"
-        android:text="ステップ練習"
-        android:textSize="36sp"
-        android:textStyle="bold" />
+        <Button
+          android:id="@+id/button12"
+          android:layout_width="wrap_content"
+          android:layout_height="60dp"
+          android:textStyle="bold"
+          android:textSize="20sp"
+          android:text="説明" />
 
-      <Button
-        android:id="@+id/back_button"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:backgroundTint="#FFF6CF"
-        android:drawableTop="@drawable/ic_baseline_undo_24"
-        android:gravity="bottom|center"
-        android:text="始めに戻る"
-        android:textSize="36sp"
-        android:textStyle="bold" />
+        <Button
+          android:id="@+id/button13"
+          android:layout_width="wrap_content"
+          android:layout_height="60dp"
+          android:layout_marginStart="245dp"
+          android:textStyle="bold"
+          android:textSize="20sp"
+          android:text="説明" />
 
-    </TableRow>
-  </TableLayout>
+        <Button
+          android:id="@+id/button14"
+          android:layout_width="wrap_content"
+          android:layout_height="60dp"
+          android:layout_marginStart="208dp"
+          android:textStyle="bold"
+          android:textSize="20sp"
+          android:visibility="gone"
+          android:text="説明" />
+      </TableRow>
+    </TableLayout>
+
+  </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
