--- a/packages/WalkingPromotor/app/src/main/res/layout/activity_second.xml
+++ b/packages/WalkingPromotor/app/src/main/res/layout/activity_second.xml
@@ -22,6 +22,7 @@
     android:textColor="#FFFFFF"
     android:textSize="36sp"
     android:textStyle="bold"
+    android:inputType="none"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.975"
