--- a/packages/WalkingPromotor/app/src/main/res/layout/activity_start.xml
+++ b/packages/WalkingPromotor/app/src/main/res/layout/activity_start.xml
@@ -6,6 +6,21 @@
   android:layout_height="match_parent"
   tools:context="io.github.healthifier.walking_promoter.activities.StartActivity">
 
+  <!-- ツールバー -->
+  <androidx.appcompat.widget.Toolbar
+    android:id="@+id/main_toolbar"
+    android:layout_width="match_parent"
+    android:layout_height="?attr/actionBarSize"
+    android:background="#FF9800"
+    android:fitsSystemWindows="true"
+    android:minHeight="?attr/actionBarSize"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:title="ステップ練習"
+    android:textStyle="bold"
+    tools:ignore="MissingConstraints" />
+
   <LinearLayout
     android:id="@+id/container"
     android:layout_width="960dp"
@@ -14,7 +29,7 @@
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.5"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"></LinearLayout>
+    app:layout_constraintTop_toBottomOf="@+id/main_toolbar" />
 
   <Button
     android:id="@+id/backButton"
