--- a/packages/WalkingPromotor/app/src/main/res/layout/activity_dairy_graph.xml
+++ b/packages/WalkingPromotor/app/src/main/res/layout/activity_dairy_graph.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".activities.MainActivity">
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:tools="http://schemas.android.com/tools"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+  tools:context="io.github.healthifier.walking_promoter.activities.DairyGraphActivity">
 
   <!-- ツールバー -->
   <androidx.appcompat.widget.Toolbar
     android:id="@+id/main_toolbar"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
-    android:background="#2196F3"
+    android:background="#FF9800"
     android:fitsSystemWindows="true"
     android:minHeight="?attr/actionBarSize"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
-    app:title="目標値を設定"
+    app:title="自分の歩数を見る"
     android:textStyle="bold"
     tools:ignore="MissingConstraints" />
 
@@ -25,6 +25,7 @@
     android:id="@+id/container"
     android:layout_width="900dp"
     android:layout_height="400dp"
+    android:layout_marginTop="8dp"
     android:orientation="horizontal"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.5"
@@ -32,16 +33,14 @@
     app:layout_constraintTop_toBottomOf="@+id/main_toolbar" />
 
   <Button
-    android:id="@+id/backButton"
+    android:id="@+id/btn_back"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="8dp"
     android:backgroundTint="#FFF6CF"
     android:text="前の画面に戻る"
-    android:textSize="30sp"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.5"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/container" />
+    android:textSize="24sp"
+    android:textStyle="bold"
+    app:layout_constraintTop_toBottomOf="@+id/container"
+    tools:layout_editor_absoluteX="417dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
