--- a/packages/WalkingPromotor/app/src/main/res/layout/activity_walk_program.xml
+++ b/packages/WalkingPromotor/app/src/main/res/layout/activity_walk_program.xml
@@ -23,7 +23,7 @@
 
   <TableLayout
     android:layout_width="958dp"
-    android:layout_height="534dp"
+    android:layout_height="460dp"
     android:layout_marginStart="1dp"
     android:layout_marginTop="1dp"
     android:layout_marginEnd="1dp"
@@ -85,7 +85,7 @@
         android:id="@+id/btn_look_all"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:backgroundTint="#FFF6CF"
+        android:backgroundTint="#FAA6A4"
         android:textSize="36sp"
         android:textStyle="bold"
         android:text="みんなの総歩数を見る" />
