--- a/packages/WalkingPromotor/app/src/main/res/layout/activity_first_diary.xml
+++ b/packages/WalkingPromotor/app/src/main/res/layout/activity_first_diary.xml
@@ -6,6 +6,22 @@
   android:layout_height="match_parent"
   tools:context="io.github.healthifier.walking_promoter.activities.FirstDiaryActivity">
 
+  <!-- ツールバー -->
+  <androidx.appcompat.widget.Toolbar
+    android:id="@+id/main_toolbar"
+    android:layout_width="match_parent"
+    android:layout_height="?attr/actionBarSize"
+    android:background="#000000"
+    android:fitsSystemWindows="true"
+    android:minHeight="?attr/actionBarSize"
+    android:textStyle="bold"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:title="スタートメニュー"
+    app:titleTextColor="#FFFFFF"
+    tools:ignore="MissingConstraints" />
+
   <Button
     android:id="@+id/btn_show_home"
     android:layout_width="400dp"
@@ -51,7 +67,7 @@
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.5"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent" />
+    app:layout_constraintTop_toBottomOf="@id/main_toolbar" />
 
   <Button
     android:id="@+id/btn_exp_home"
@@ -60,6 +76,7 @@
     android:text="説明"
     android:textSize="24sp"
     android:textStyle="bold"
+    android:background="@drawable/frame_style"
     app:layout_constraintStart_toStartOf="@+id/btn_show_home"
     app:layout_constraintTop_toTopOf="@+id/btn_show_home" />
 
@@ -70,6 +87,7 @@
     android:text="説明"
     android:textSize="24sp"
     android:textStyle="bold"
+    android:background="@drawable/frame_style"
     app:layout_constraintStart_toStartOf="@+id/btn_show_online"
     app:layout_constraintTop_toTopOf="@+id/btn_show_online" />
 
