--- a/packages/WalkingPromotor/app/src/main/res/layout/activity_home_program.xml
+++ b/packages/WalkingPromotor/app/src/main/res/layout/activity_home_program.xml
@@ -137,6 +137,7 @@
           android:layout_height="60dp"
           android:textStyle="bold"
           android:textSize="20sp"
+          android:background="@drawable/frame_style"
           android:text="説明" />
 
         <Button
@@ -146,6 +147,7 @@
           android:layout_marginStart="220dp"
           android:textStyle="bold"
           android:textSize="20sp"
+          android:background="@drawable/frame_style"
           android:text="説明" />
 
         <Button
@@ -155,6 +157,7 @@
           android:layout_marginStart="220dp"
           android:textStyle="bold"
           android:textSize="20sp"
+          android:background="@drawable/frame_style"
           android:text="説明" />
       </TableRow>
 
@@ -169,6 +172,7 @@
           android:layout_height="60dp"
           android:textStyle="bold"
           android:textSize="20sp"
+          android:background="@drawable/frame_style"
           android:text="説明" />
 
         <Button
@@ -178,6 +182,7 @@
           android:layout_marginStart="220dp"
           android:textStyle="bold"
           android:textSize="20sp"
+          android:background="@drawable/frame_style"
           android:text="説明" />
 
         <Button
