--- a/packages/WalkingPromotor/app/src/main/res/layout/activity_data_select.xml
+++ b/packages/WalkingPromotor/app/src/main/res/layout/activity_data_select.xml
@@ -42,28 +42,6 @@
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintTop_toTopOf="parent" />
 
-  <Button
-    android:id="@+id/button_user1"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginStart="32dp"
-    android:layout_marginBottom="32dp"
-    android:text="user1"
-    android:textSize="24sp"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintStart_toStartOf="parent" />
-
-  <Button
-    android:id="@+id/button_user2"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginStart="32dp"
-    android:layout_marginBottom="32dp"
-    android:text="user2"
-    android:textSize="24sp"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintStart_toEndOf="@+id/button_user1" />
-
   <ImageView
     android:id="@+id/imageView3"
     android:layout_width="265dp"
@@ -92,52 +70,6 @@
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintTop_toTopOf="parent" />
 
-  <Button
-    android:id="@+id/button_user3"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginStart="32dp"
-    android:layout_marginBottom="32dp"
-    android:text="user3"
-    android:textSize="24sp"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintStart_toEndOf="@+id/button_user2" />
-
-  <Button
-    android:id="@+id/button_user4"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginStart="32dp"
-    android:layout_marginBottom="32dp"
-    android:text="user4"
-    android:textSize="24sp"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintStart_toEndOf="@+id/button_user3" />
-
-  <Button
-    android:id="@+id/button_user5"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginStart="32dp"
-    android:layout_marginBottom="32dp"
-    android:text="user5"
-    android:textSize="24sp"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintStart_toEndOf="@+id/button_user4" />
-
-  <Button
-    android:id="@+id/button_camera"
-    android:layout_width="120dp"
-    android:layout_height="120dp"
-    android:layout_marginEnd="8dp"
-    android:layout_marginBottom="32dp"
-    android:gravity="bottom|center"
-    android:stateListAnimator="@null"
-    android:text="カメラ"
-    android:textSize="20sp"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toStartOf="@+id/button_update" />
-
   <TextView
     android:id="@+id/textView_user"
     android:layout_width="wrap_content"
@@ -149,24 +81,90 @@
     app:layout_constraintStart_toStartOf="parent" />
 
   <Button
+    android:id="@+id/button_camera"
+    android:layout_width="wrap_content"
+    android:layout_height="0dp"
+    android:gravity="bottom|center"
+    android:stateListAnimator="@null"
+    android:text="カメラ"
+    android:textSize="20sp"
+    tools:layout_editor_absoluteX="640dp"
+    tools:layout_editor_absoluteY="26dp" />
+
+  <Button
     android:id="@+id/button_update"
-    android:layout_width="120dp"
-    android:layout_height="120dp"
-    android:layout_marginEnd="23dp"
-    android:layout_marginBottom="32dp"
+    android:layout_width="wrap_content"
+    android:layout_height="0dp"
     android:text="更新"
     android:textSize="24sp"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent" />
+    tools:layout_editor_absoluteX="779dp"
+    tools:layout_editor_absoluteY="21dp" />
 
-  <ImageView
-    android:id="@+id/imageView2"
-    android:layout_width="96dp"
-    android:layout_height="96dp"
-    android:layout_marginBottom="16dp"
-    app:layout_constraintBottom_toBottomOf="@+id/button_camera"
-    app:layout_constraintEnd_toEndOf="@+id/button_camera"
-    app:layout_constraintStart_toStartOf="@+id/button_camera"
-    app:layout_constraintTop_toTopOf="@+id/button_camera"
-    app:srcCompat="@android:drawable/ic_menu_camera" />
+  <LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="16dp"
+    android:layout_marginTop="32dp"
+    android:layout_marginEnd="16dp"
+    android:orientation="horizontal"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/textView2">
+
+    <Button
+      android:id="@+id/button_user1"
+      android:layout_width="0dp"
+      android:layout_height="match_parent"
+      android:layout_margin="8dp"
+      android:layout_weight="1"
+      android:background="@drawable/frame_style"
+      android:padding="16dp"
+      android:text="user1"
+      android:textSize="24sp" />
+
+    <Button
+      android:id="@+id/button_user2"
+      android:layout_width="0dp"
+      android:layout_height="match_parent"
+      android:layout_margin="8dp"
+      android:layout_weight="1"
+      android:background="@drawable/frame_style"
+      android:padding="16dp"
+      android:text="user2"
+      android:textSize="24sp" />
+
+    <Button
+      android:id="@+id/button_user3"
+      android:layout_width="0dp"
+      android:layout_height="match_parent"
+      android:layout_margin="8dp"
+      android:layout_weight="1"
+      android:background="@drawable/frame_style"
+      android:padding="16dp"
+      android:text="user3"
+      android:textSize="24sp" />
+
+    <Button
+      android:id="@+id/button_user4"
+      android:layout_width="0dp"
+      android:layout_height="match_parent"
+      android:layout_margin="8dp"
+      android:layout_weight="1"
+      android:background="@drawable/frame_style"
+      android:padding="16dp"
+      android:text="user4"
+      android:textSize="24sp" />
+
+    <Button
+      android:id="@+id/button_user5"
+      android:layout_width="0dp"
+      android:layout_height="match_parent"
+      android:layout_margin="8dp"
+      android:layout_weight="1"
+      android:background="@drawable/frame_style"
+      android:padding="16dp"
+      android:text="user5"
+      android:textSize="24sp" />
+
+  </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
