--- a/packages/WalkingPromotor/app/src/main/res/layout/activity_data_select.xml
+++ b/packages/WalkingPromotor/app/src/main/res/layout/activity_data_select.xml
@@ -6,105 +6,104 @@
   android:layout_height="match_parent"
   tools:context="io.github.healthifier.walking_promoter.activities.DataSelectActivity">
 
+  <!-- ツールバー -->
+  <androidx.appcompat.widget.Toolbar
+    android:id="@+id/main_toolbar"
+    android:layout_width="match_parent"
+    android:layout_height="?attr/actionBarSize"
+    android:background="#2196F3"
+    android:fitsSystemWindows="true"
+    android:minHeight="?attr/actionBarSize"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:title="自宅メニュー"
+    app:titleTextColor="#ffffff"
+    app:titleTextAppearance="@style/TextAppearance.Toolbar"
+    tools:ignore="MissingConstraints" />
+
   <TextView
     android:id="@+id/textView"
     android:layout_width="265dp"
     android:layout_height="200dp"
     android:layout_marginStart="32dp"
-    android:layout_marginTop="90dp"
+    android:layout_marginTop="70dp"
     android:background="@drawable/view_frame"
     android:gravity="center_horizontal|center_vertical"
     android:text="撮影してから選択してください"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent" />
+    app:layout_constraintTop_toBottomOf="@+id/main_toolbar" />
 
   <TextView
     android:id="@+id/textView2"
     android:layout_width="265dp"
     android:layout_height="200dp"
     android:layout_marginStart="348dp"
-    android:layout_marginTop="90dp"
+    android:layout_marginTop="70dp"
     android:background="@drawable/view_frame"
     android:gravity="center_horizontal|center_vertical"
     android:text="撮影してから選択してください"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent" />
+    app:layout_constraintTop_toBottomOf="@+id/main_toolbar" />
 
   <TextView
     android:id="@+id/textView3"
     android:layout_width="265dp"
     android:layout_height="200dp"
-    android:layout_marginTop="90dp"
+    android:layout_marginTop="70dp"
     android:layout_marginEnd="34dp"
     android:background="@drawable/view_frame"
     android:gravity="center_horizontal|center_vertical"
     android:text="撮影してから選択してください"
     app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintTop_toTopOf="parent" />
+    app:layout_constraintTop_toBottomOf="@+id/main_toolbar" />
 
   <ImageView
     android:id="@+id/imageView3"
     android:layout_width="265dp"
     android:layout_height="200dp"
     android:layout_marginStart="32dp"
-    android:layout_marginTop="90dp"
+    android:layout_marginTop="70dp"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent" />
+    app:layout_constraintTop_toBottomOf="@+id/main_toolbar" />
 
   <ImageView
     android:id="@+id/imageView4"
     android:layout_width="265dp"
     android:layout_height="200dp"
-    android:layout_marginTop="90dp"
+    android:layout_marginTop="70dp"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.5"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent" />
+    app:layout_constraintTop_toBottomOf="@+id/main_toolbar" />
 
   <ImageView
     android:id="@+id/imageView5"
     android:layout_width="265dp"
     android:layout_height="200dp"
-    android:layout_marginTop="90dp"
+    android:layout_marginTop="70dp"
     android:layout_marginEnd="34dp"
     app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintTop_toTopOf="parent" />
+    app:layout_constraintTop_toBottomOf="@+id/main_toolbar" />
 
   <TextView
     android:id="@+id/textView_user"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginStart="32dp"
-    android:layout_marginBottom="32dp"
+    android:layout_marginBottom="24dp"
     android:textSize="24sp"
+    android:text="example"
+    android:textColor="#000000"
     app:layout_constraintBottom_toTopOf="@+id/textView"
     app:layout_constraintStart_toStartOf="parent" />
 
-  <Button
-    android:id="@+id/button_camera"
-    android:layout_width="wrap_content"
-    android:layout_height="0dp"
-    android:gravity="bottom|center"
-    android:stateListAnimator="@null"
-    android:text="カメラ"
-    android:textSize="20sp"
-    tools:layout_editor_absoluteX="640dp"
-    tools:layout_editor_absoluteY="26dp" />
-
-  <Button
-    android:id="@+id/button_update"
-    android:layout_width="wrap_content"
-    android:layout_height="0dp"
-    android:text="更新"
-    android:textSize="24sp"
-    tools:layout_editor_absoluteX="779dp"
-    tools:layout_editor_absoluteY="21dp" />
-
   <LinearLayout
+    android:id="@+id/user_button_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="16dp"
-    android:layout_marginTop="32dp"
+    android:layout_marginTop="24dp"
     android:layout_marginEnd="16dp"
     android:orientation="horizontal"
     app:layout_constraintEnd_toEndOf="parent"
@@ -120,7 +119,7 @@
       android:background="@drawable/frame_style"
       android:padding="16dp"
       android:text="user1"
-      android:textSize="24sp" />
+      android:textSize="28sp" />
 
     <Button
       android:id="@+id/button_user2"
@@ -131,7 +130,7 @@
       android:background="@drawable/frame_style"
       android:padding="16dp"
       android:text="user2"
-      android:textSize="24sp" />
+      android:textSize="28sp" />
 
     <Button
       android:id="@+id/button_user3"
@@ -142,7 +141,7 @@
       android:background="@drawable/frame_style"
       android:padding="16dp"
       android:text="user3"
-      android:textSize="24sp" />
+      android:textSize="28sp" />
 
     <Button
       android:id="@+id/button_user4"
@@ -153,7 +152,7 @@
       android:background="@drawable/frame_style"
       android:padding="16dp"
       android:text="user4"
-      android:textSize="24sp" />
+      android:textSize="28sp" />
 
     <Button
       android:id="@+id/button_user5"
@@ -164,7 +163,41 @@
       android:background="@drawable/frame_style"
       android:padding="16dp"
       android:text="user5"
+      android:textSize="28sp" />
+
+  </LinearLayout>
+  <LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="16dp"
+    android:layout_marginTop="0dp"
+    android:layout_marginEnd="16dp"
+    android:orientation="horizontal"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/user_button_layout">
+
+    <Button
+      android:id="@+id/button_back"
+      android:layout_width="0dp"
+      android:layout_height="match_parent"
+      android:layout_weight="1"
+      android:layout_margin="8dp"
+      android:padding="16dp"
+      android:stateListAnimator="@null"
+      android:background="@drawable/frame_style"
+      android:text="前の画面に戻る"
       android:textSize="24sp" />
 
+    <Button
+      android:id="@+id/button_update"
+      android:layout_width="0dp"
+      android:layout_height="match_parent"
+      android:layout_weight="1"
+      android:layout_margin="8dp"
+      android:padding="16dp"
+      android:background="@drawable/frame_style"
+      android:text="更新"
+      android:textSize="24sp" />
   </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
