--- a/packages/WalkingPromotor/app/src/main/res/layout/activity_first_diary.xml
+++ b/packages/WalkingPromotor/app/src/main/res/layout/activity_first_diary.xml
@@ -11,7 +11,7 @@
     android:id="@+id/main_toolbar"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
-    android:background="#000000"
+    android:background="#08AF0F"
     android:fitsSystemWindows="true"
     android:minHeight="?attr/actionBarSize"
     android:textStyle="bold"
@@ -19,6 +19,7 @@
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:title="スタートメニュー"
+    app:titleTextAppearance="@style/TextAppearance.Toolbar"
     app:titleTextColor="#FFFFFF"
     tools:ignore="MissingConstraints" />
 
