--- a/packages/WalkingPromotor/app/src/main/res/layout/activity_second.xml
+++ b/packages/WalkingPromotor/app/src/main/res/layout/activity_second.xml
@@ -92,6 +92,7 @@
     android:layout_width="540dp"
     android:layout_height="78dp"
     android:layout_marginStart="12dp"
+    android:inputType="text"
     android:ems="10"
     android:hint="タイトル"
     android:text=""
