--- a/packages/WalkingPromotor/app/src/main/res/layout/activity_third.xml
+++ b/packages/WalkingPromotor/app/src/main/res/layout/activity_third.xml
@@ -7,13 +7,57 @@
         android:layout_height="match_parent"
         tools:context=".activities.ThirdActivity">
 
-    <ListView
-            android:id="@+id/list_view"
-            android:layout_width="940dp"
-            android:layout_height="599dp"
-            android:layout_marginTop="64dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+  <!-- ツールバー -->
+  <androidx.appcompat.widget.Toolbar
+    android:id="@+id/main_toolbar"
+    android:layout_width="match_parent"
+    android:layout_height="?attr/actionBarSize"
+    android:background="#FF9800"
+    android:fitsSystemWindows="true"
+    android:minHeight="?attr/actionBarSize"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:title="自分が書いた日記"
+    app:titleTextAppearance="@style/TextAppearance.Toolbar"
+    android:textStyle="bold"
+    tools:ignore="MissingConstraints" />
+
+  <LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/main_toolbar">
+
+    <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="390dp"
+      android:layout_weight="1">
+
+      <ListView
+        android:id="@+id/list_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    </LinearLayout>
+
+    <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_weight="1">
+
+      <Button
+        android:id="@+id/button_back"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:backgroundTint="#FFF6CF"
+        android:textSize="40sp"
+        android:text="前の画面に戻る"
+        android:textStyle="bold"/>
+
+    </LinearLayout>
+  </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
