--- a/packages/WalkingPromotor/app/src/main/res/layout/custom_dialog_diary.xml
+++ b/packages/WalkingPromotor/app/src/main/res/layout/custom_dialog_diary.xml
@@ -5,34 +5,50 @@
   android:layout_width="match_parent"
   android:layout_height="match_parent">
 
-  <TextView
-    android:id="@+id/ctm_title_textView"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="24dp"
-    android:text="Title"
-    android:textSize="30sp"
-    app:layout_constraintStart_toStartOf="@+id/ctm_imgae_imageView"
-    app:layout_constraintTop_toBottomOf="@+id/ctm_imgae_imageView" />
+  <LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="horizontal">
 
-  <TextView
-    android:id="@+id/ctm_day_textView"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="24dp"
-    android:text="Day"
-    android:textSize="30sp"
-    app:layout_constraintEnd_toEndOf="@+id/ctm_imgae_imageView"
-    app:layout_constraintTop_toBottomOf="@+id/ctm_imgae_imageView" />
+    <ImageView
+      android:id="@+id/ctm_imgae_imageView"
+      android:layout_width="0dp"
+      android:layout_height="match_parent"
+      android:layout_weight="2"/>
 
-  <ImageView
-    android:id="@+id/ctm_imgae_imageView"
-    android:layout_width="619dp"
-    android:layout_height="363dp"
-    android:layout_marginTop="8dp"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.5"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent" />
+    <LinearLayout
+      android:layout_width="0dp"
+      android:layout_height="match_parent"
+      android:layout_weight="1"
+      android:orientation="vertical">
+
+      <TextView
+        android:id="@+id/ctm_title_textView"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="2"
+        android:gravity="center_vertical"
+        android:text="Title"
+        android:textSize="30sp" />
+
+      <TextView
+        android:id="@+id/ctm_day_textView"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="2"
+        android:text="Day"
+        android:textSize="30sp" />
+
+      <Button
+        android:id="@+id/ctm_back_button"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/frame_style"
+        android:text="この画面を閉じる"
+        android:textSize="24sp"/>
+    </LinearLayout>
+  </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
