--- a/packages/WalkingPromotor/app/src/main/res/layout/fragment_step_list.xml
+++ b/packages/WalkingPromotor/app/src/main/res/layout/fragment_step_list.xml
@@ -5,19 +5,21 @@
   android:layout_height="match_parent"
   android:orientation="vertical"
   android:paddingTop="10dp"
-  android:paddingBottom="100dp">
+  android:paddingBottom="10dp">
 
   <TextView
     android:id="@+id/titleTextView"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_height="0dp"
     android:layout_gravity="center_horizontal"
+    android:layout_weight="1"
     android:text="今日のステップ一覧"
     android:textAppearance="?android:attr/textAppearanceLarge" />
 
   <LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="0dp"
+    android:layout_weight="9"
     android:orientation="horizontal">
 
     <ListView
