--- a/packages/WalkingPromotor/app/src/main/res/layout/fragment_step_main.xml
+++ b/packages/WalkingPromotor/app/src/main/res/layout/fragment_step_main.xml
@@ -5,7 +5,7 @@
   android:layout_height="match_parent"
   android:orientation="vertical"
   android:paddingTop="10dp"
-  android:paddingBottom="40dp">
+  android:paddingBottom="10dp">
 
   <LinearLayout
     android:layout_width="match_parent"
@@ -299,7 +299,7 @@
 
     <RelativeLayout
       android:layout_width="0dp"
-      android:layout_height="wrap_content"
+      android:layout_height="match_parent"
       android:layout_weight="1">
 
       <Button
