--- a/packages/WalkingPromotor/app/src/main/res/values/styles.xml
+++ b/packages/WalkingPromotor/app/src/main/res/values/styles.xml
@@ -5,4 +5,10 @@
     <!-- Customize your theme here. -->
   </style>
 
+  <style name="TextAppearance.Toolbar" parent="TextAppearance.AppCompat.Widget.ActionBar.Title">
+    <item name="android:textAllCaps">false</item>
+    <item name="android:textStyle">normal</item>
+    <item name="android:textSize">24sp</item>
+  </style>
+
 </resources>
