--- a/packages/WalkingPromotor/app/src/main/res/layout/activity_third.xml
+++ b/packages/WalkingPromotor/app/src/main/res/layout/activity_third.xml
@@ -19,6 +19,7 @@
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:title="自分が書いた日記"
+    app:titleTextColor="#ffffff"
     app:titleTextAppearance="@style/TextAppearance.Toolbar"
     android:textStyle="bold"
     tools:ignore="MissingConstraints" />
@@ -36,25 +37,32 @@
       android:layout_height="390dp"
       android:layout_weight="1">
 
-      <ListView
-        android:id="@+id/list_view"
+      <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/gridRecyclerView_third"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent" />
 
     </LinearLayout>
 
     <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
+      android:orientation="vertical"
       android:layout_weight="1">
 
       <Button
         android:id="@+id/button_back"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="#FFF6CF"
-        android:textSize="40sp"
+        android:layout_gravity="end"
+        android:layout_marginEnd="22dp"
+        android:layout_marginTop="4dp"
+        android:background="@drawable/frame_style"
+        android:drawableStart="@drawable/ic_baseline_undo_24_60"
+        android:drawablePadding="10dp"
+        android:textSize="32sp"
         android:text="前の画面に戻る"
+        android:paddingHorizontal="16dp"
         android:textStyle="bold"/>
 
     </LinearLayout>
