--- a/packages/WalkingPromotor/app/src/main/res/layout/activity_diary_menu.xml
+++ b/packages/WalkingPromotor/app/src/main/res/layout/activity_diary_menu.xml
@@ -18,12 +18,13 @@
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:title="日記を見るメニュー"
+    app:titleTextColor="#ffffff"
     app:titleTextAppearance="@style/TextAppearance.Toolbar"
     tools:ignore="MissingConstraints" />
 
   <LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="460dp"
     android:orientation="vertical"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
@@ -38,6 +39,7 @@
         android:id="@+id/btn_diary_mine"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:layout_margin="20dp"
         android:layout_weight="2"
         android:backgroundTint="#FF9800"
         android:drawableTop="@drawable/ic_baseline_person_24"
@@ -52,6 +54,7 @@
         android:id="@+id/btn_diary_every"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:layout_margin="20dp"
         android:layout_weight="1"
         android:backgroundTint="#2196F3"
         android:drawableTop="@drawable/ic_baseline_group_24"
@@ -67,26 +70,28 @@
     <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
+      android:orientation="vertical"
       android:layout_weight="1">
 
       <Button
         android:id="@+id/backButton"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="#FFF6CF"
-        android:textSize="40sp"
+        android:layout_gravity="right"
+        android:layout_marginEnd="22dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/frame_style"
+        android:drawableStart="@drawable/ic_baseline_undo_24_60"
+        android:drawablePadding="10dp"
         android:text="前の画面に戻る"
-        android:textStyle="bold"/>
+        android:textColor="#000000"
+        android:padding="14dp"
+        android:textSize="36sp"
+        android:textStyle="bold" />
 
     </LinearLayout>
 
 
   </LinearLayout>
-
-
-
-
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
