--- a/packages/WalkingPromotor/app/src/main/res/layout/activity_diary_up.xml
+++ b/packages/WalkingPromotor/app/src/main/res/layout/activity_diary_up.xml
@@ -19,27 +19,48 @@
     app:title="日記を投稿する"
     tools:ignore="MissingConstraints" />
 
-  <ListView
-    android:id="@+id/list_view"
-    android:layout_width="940dp"
-    android:layout_height="400dp"
-    android:layout_marginStart="8dp"
-    android:layout_marginEnd="8dp"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/main_toolbar" />
-
-  <Button
-    android:id="@+id/backButton"
+  <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:backgroundTint="#FFF6CF"
-    android:text="前の画面に戻る"
-    android:textSize="30sp"
-    android:textStyle="bold"
+    android:orientation="vertical"
     app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.5"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/list_view" />
+    app:layout_constraintTop_toBottomOf="@+id/main_toolbar">
+
+    <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="390dp"
+      android:layout_weight="1">
+
+      <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/gridRecyclerView_up"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    </LinearLayout>
+
+    <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:orientation="vertical"
+      android:layout_weight="1">
+
+      <Button
+        android:id="@+id/backButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:layout_marginEnd="22dp"
+        android:layout_marginTop="4dp"
+        android:background="@drawable/frame_style"
+        android:drawableStart="@drawable/ic_baseline_undo_24_60"
+        android:drawablePadding="10dp"
+        android:textSize="32sp"
+        android:text="前の画面に戻る"
+        android:paddingHorizontal="16dp"
+        android:textStyle="bold"/>
+
+    </LinearLayout>
+  </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
