--- a/packages/WalkingPromotor/app/src/main/res/layout/activity_first_diary.xml
+++ b/packages/WalkingPromotor/app/src/main/res/layout/activity_first_diary.xml
@@ -47,7 +47,7 @@
     android:layout_marginTop="8dp"
     android:layout_marginEnd="32dp"
     android:background="#2196F3"
-    android:drawableTop="@drawable/ic_baseline_group_24"
+    android:drawableTop="@drawable/ic_baseline_group_24_280"
     android:drawableTint="#FFFFFF"
     android:gravity="bottom|center"
     android:text="教室"
@@ -63,6 +63,7 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="16dp"
     android:text="どちらかを選択してください"
+    android:textColor="#000000"
     android:textSize="36sp"
     android:textStyle="bold"
     app:layout_constraintEnd_toEndOf="parent"
@@ -75,6 +76,7 @@
     android:layout_width="80dp"
     android:layout_height="80dp"
     android:text="説明"
+    android:textColor="#000000"
     android:textSize="24sp"
     android:textStyle="bold"
     android:background="@drawable/frame_style"
@@ -86,10 +88,21 @@
     android:layout_width="80dp"
     android:layout_height="80dp"
     android:text="説明"
+    android:textColor="#000000"
     android:textSize="24sp"
     android:textStyle="bold"
     android:background="@drawable/frame_style"
     app:layout_constraintStart_toStartOf="@+id/btn_show_online"
     app:layout_constraintTop_toTopOf="@+id/btn_show_online" />
+
+  <ImageView
+    android:id="@+id/imageView2"
+    android:layout_width="60dp"
+    android:layout_height="60dp"
+    android:layout_marginTop="2dp"
+    android:layout_marginEnd="16dp"
+    app:layout_constraintEnd_toEndOf="@+id/main_toolbar"
+    app:layout_constraintTop_toTopOf="parent"
+    app:srcCompat="@drawable/ic_baseline_live_help_24" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
