--- a/packages/WalkingPromotor/app/src/main/res/layout/activity_program.xml
+++ b/packages/WalkingPromotor/app/src/main/res/layout/activity_program.xml
@@ -18,10 +18,9 @@
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:title="教室メニュー"
-    app:titleTextColor="#FFFFFF"
     app:titleTextAppearance="@style/TextAppearance.Toolbar"
+    app:titleTextColor="#FFFFFF"
     tools:ignore="MissingConstraints" />
-
 
   <FrameLayout
     android:layout_width="match_parent"
@@ -29,10 +28,144 @@
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/main_toolbar">
 
+    <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="460dp"
+      android:orientation="vertical">
+
+      <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1">
+
+        <Button
+          android:id="@+id/button4"
+          android:layout_width="wrap_content"
+          android:layout_height="match_parent"
+          android:layout_margin="20dp"
+          android:layout_weight="2"
+          android:backgroundTint="#FF9800"
+          android:drawableTop="@drawable/ic_baseline_image_search_24"
+          android:drawableTint="#FFFFFF"
+          android:gravity="bottom|center"
+          android:text="みんなで写真共有"
+          android:textColor="#FFFFFF"
+          android:textSize="50sp"
+          android:textStyle="bold" />
+
+        <Button
+          android:id="@+id/button3"
+          android:layout_width="wrap_content"
+          android:layout_height="match_parent"
+          android:layout_margin="20dp"
+          android:layout_weight="1"
+          android:backgroundTint="#2196F3"
+          android:drawableTop="@drawable/ic_baseline_flag_24"
+          android:drawableTint="#FFFFFF"
+          android:gravity="bottom|center"
+          android:text="みんなで目標設定"
+          android:textColor="#FFFFFF"
+          android:textSize="50sp"
+          android:textStyle="bold" />
+
+      </LinearLayout>
+
+      <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1">
+
+        <TextView
+          android:id="@+id/textView_log"
+          android:layout_width="0dp"
+          android:layout_height="match_parent"
+          android:layout_weight="2"
+          android:layout_marginStart="22dp"
+          android:layout_marginBottom="8dp"
+          android:gravity="center_vertical"
+          android:text="AAAA"
+          android:textColor="#000000"
+          android:textSize="30sp"
+          tools:ignore="NestedWeights" />
+
+        <Button
+          android:id="@+id/button5"
+          android:layout_width="0dp"
+          android:layout_height="match_parent"
+          android:layout_weight="1"
+          android:layout_gravity="end"
+          android:layout_marginEnd="22dp"
+          android:layout_marginBottom="8dp"
+          android:background="@drawable/frame_style"
+          android:drawableStart="@drawable/ic_baseline_undo_24_60"
+          android:drawablePadding="10dp"
+          android:padding="14dp"
+          android:text="始めに戻る"
+          android:textColor="#000000"
+          android:textSize="36sp"
+          android:textStyle="bold" />
+
+      </LinearLayout>
+    </LinearLayout>
+
     <TableLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      android:stretchColumns="0,1,2">
+      android:layout_marginTop="20dp">
+
+      <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginStart="24dp">
+
+        <Button
+          android:id="@+id/btn_exp_share"
+          android:layout_width="wrap_content"
+          android:layout_height="60dp"
+          android:background="@drawable/frame_style"
+          android:text="説明"
+          android:textColor="#000000"
+          android:textSize="20sp"
+          android:textStyle="bold" />
+
+        <Button
+          android:id="@+id/btn_exp_goal"
+          android:layout_width="wrap_content"
+          android:layout_height="60dp"
+          android:layout_marginStart="396dp"
+          android:background="@drawable/frame_style"
+          android:text="説明"
+          android:textColor="#000000"
+          android:textSize="20sp"
+          android:textStyle="bold" />
+
+        <Button
+          android:id="@+id/btn_exp_back"
+          android:layout_width="wrap_content"
+          android:layout_height="60dp"
+          android:layout_marginStart="216dp"
+          android:background="@drawable/frame_style"
+          android:text="説明"
+          android:textColor="#000000"
+          android:textSize="20sp"
+          android:textStyle="bold"
+          android:visibility="gone" />
+      </TableRow>
+    </TableLayout>
+  </FrameLayout>
+
+  <!--
+
+  <FrameLayout
+    android:id="@+id/frameLayout"
+    android:layout_width="match_parent"
+    android:layout_height="460dp"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/main_toolbar">
+
+    <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="match_parent">
 
       <TableRow
         android:layout_width="match_parent"
@@ -65,22 +198,28 @@
           android:textSize="36sp"
           android:textStyle="bold" />
 
-        <Button
-          android:id="@+id/button5"
-          android:layout_width="wrap_content"
-          android:layout_height="match_parent"
-          android:layout_weight="1"
-          android:backgroundTint="#9981CC"
-          android:drawableTop="@drawable/ic_baseline_undo_24"
-          android:drawableTint="#FFFFFF"
-          android:gravity="bottom|center"
-          android:text="始めに戻る"
-          android:textColor="#ffffff"
-          android:textSize="32sp"
-          android:textStyle="bold" />
-
       </TableRow>
-    </TableLayout>
+    </LinearLayout>
+
+    <LinearLayout
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content">
+
+      <Button
+        android:id="@+id/button5"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:backgroundTint="#9981CC"
+        android:drawableTop="@drawable/ic_baseline_undo_24"
+        android:drawableTint="#FFFFFF"
+        android:gravity="bottom|center"
+        android:text="始めに戻る"
+        android:textColor="#ffffff"
+        android:textSize="32sp"
+        android:textStyle="bold" />
+
+    </LinearLayout>
 
     <TableLayout
       android:layout_width="match_parent"
@@ -94,33 +233,34 @@
           android:id="@+id/btn_exp_share"
           android:layout_width="wrap_content"
           android:layout_height="60dp"
-          android:textStyle="bold"
-          android:textSize="20sp"
           android:background="@drawable/frame_style"
-          android:text="説明" />
+          android:text="説明"
+          android:textSize="20sp"
+          android:textStyle="bold" />
 
         <Button
           android:id="@+id/btn_exp_goal"
           android:layout_width="wrap_content"
           android:layout_height="60dp"
           android:layout_marginStart="280dp"
-          android:textStyle="bold"
-          android:textSize="20sp"
           android:background="@drawable/frame_style"
-          android:text="説明" />
+          android:text="説明"
+          android:textSize="20sp"
+          android:textStyle="bold" />
 
         <Button
           android:id="@+id/btn_exp_back"
           android:layout_width="wrap_content"
           android:layout_height="60dp"
           android:layout_marginStart="220dp"
-          android:textStyle="bold"
-          android:textSize="20sp"
           android:background="@drawable/frame_style"
-          android:visibility="gone"
-          android:text="説明" />
+          android:text="説明"
+          android:textSize="20sp"
+          android:textStyle="bold"
+          android:visibility="gone" />
       </TableRow>
     </TableLayout>
 
   </FrameLayout>
+  !-->
 </androidx.constraintlayout.widget.ConstraintLayout>
