--- a/packages/WalkingPromotor/app/src/main/res/layout/activity_start.xml
+++ b/packages/WalkingPromotor/app/src/main/res/layout/activity_start.xml
@@ -34,14 +34,18 @@
 
   <Button
     android:id="@+id/backButton"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginTop="8dp"
-    android:backgroundTint="#FFF6CF"
+    android:layout_gravity="end"
+    android:layout_marginTop="4dp"
+    android:layout_marginEnd="22dp"
+    android:background="@drawable/frame_style"
+    android:drawableStart="@drawable/ic_baseline_undo_24_60"
+    android:drawablePadding="10dp"
+    android:paddingHorizontal="16dp"
     android:text="前の画面に戻る"
-    android:textSize="30sp"
+    android:textSize="32sp"
+    android:textStyle="bold"
     app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.5"
-    app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/container" />
 </androidx.constraintlayout.widget.ConstraintLayout>
