--- a/packages/WalkingPromotor/app/src/main/res/values/styles.xml
+++ b/packages/WalkingPromotor/app/src/main/res/values/styles.xml
@@ -7,8 +7,8 @@
 
   <style name="TextAppearance.Toolbar" parent="TextAppearance.AppCompat.Widget.ActionBar.Title">
     <item name="android:textAllCaps">false</item>
-    <item name="android:textStyle">normal</item>
-    <item name="android:textSize">24sp</item>
+    <item name="android:textStyle">bold</item>
+    <item name="android:textSize">30sp</item>
   </style>
 
 </resources>
