--- a/packages/WalkingPromotor/app/src/main/res/layout/activity_walk_program.xml
+++ b/packages/WalkingPromotor/app/src/main/res/layout/activity_walk_program.xml
@@ -18,6 +18,7 @@
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:title="歩数メニュー"
+    app:titleTextAppearance="@style/TextAppearance.Toolbar"
     android:textStyle="bold"
     tools:ignore="MissingConstraints" />
 
@@ -43,6 +44,8 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:backgroundTint="#FAA6A4"
+        android:drawableTop="@drawable/ic_baseline_create_24"
+        android:drawableTint="#FFFFFF"
         android:textSize="36sp"
         android:textStyle="bold"
         android:text="歩数を記録する" />
@@ -52,6 +55,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:backgroundTint="#FFF6CF"
+        android:drawableTop="@drawable/ic_baseline_create_24"
         android:text="目標値を記録する"
         android:textSize="36sp"
         android:textStyle="bold" />
@@ -61,6 +65,8 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:backgroundTint="#FAA6A4"
+        android:drawableTop="@drawable/ic_baseline_undo_24"
+        android:drawableTint="#FFFFFF"
         android:textSize="36sp"
         android:textStyle="bold"
         android:text="前の画面に戻る" />
@@ -77,6 +83,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:backgroundTint="#FFF6CF"
+        android:drawableTop="@drawable/ic_baseline_search_24_1"
         android:textSize="36sp"
         android:textStyle="bold"
         android:text="自分の歩数を見る" />
@@ -86,6 +93,8 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:backgroundTint="#FAA6A4"
+        android:drawableTop="@drawable/ic_baseline_search_24_1"
+        android:drawableTint="#FFFFFF"
         android:textSize="36sp"
         android:textStyle="bold"
         android:text="みんなの総歩数を見る" />
