--- a/packages/WalkingPromotor/app/src/main/res/layout/activity_diary_up.xml
+++ b/packages/WalkingPromotor/app/src/main/res/layout/activity_diary_up.xml
@@ -17,6 +17,9 @@
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:title="日記を投稿する"
+    app:titleTextColor="#ffffff"
+    app:titleTextAppearance="@style/TextAppearance.Toolbar"
+    android:textStyle="bold"
     tools:ignore="MissingConstraints" />
 
   <LinearLayout
