--- a/packages/WalkingPromotor/app/src/main/res/layout/activity_sign.xml
+++ b/packages/WalkingPromotor/app/src/main/res/layout/activity_sign.xml
@@ -48,7 +48,7 @@
     android:layout_marginTop="24dp"
     android:focusable="true"
     android:focusableInTouchMode="true"
-    android:text="あなたの名前を入力してグループを選択してください"
+    android:text="あなたの名前を入力してグループの果物を選択してください"
     android:textColor="#000000"
     android:textSize="30sp"
     app:layout_constraintEnd_toEndOf="parent"
@@ -100,8 +100,8 @@
 
   <TableLayout
     android:layout_width="match_parent"
-    android:layout_height="170dp"
-    android:layout_marginBottom="8dp"
+    android:layout_height="150dp"
+    android:layout_marginBottom="16dp"
     android:shrinkColumns="0,1,2,3,4"
     app:layout_constraintBottom_toTopOf="@+id/linearLayout_sign">
 
